--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_calendar"
-        android:icon="@android:drawable/ic_menu_today"
+        android:icon="@drawable/ic_today_24px"
         android:title="@string/title_calendar" />
     <item
         android:id="@+id/navigation_dashboard"
@@ -11,7 +11,7 @@
         android:title="@string/title_dashboard" />
     <item
         android:id="@+id/navigation_todolist"
-        android:icon="@android:drawable/checkbox_on_background"
+        android:icon="@drawable/ic_list_alt_24px"
         android:title="@string/title_todolist" />
 
 </menu>
