--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="screenBackground">#FFFAEB</color>
+    <color name="buttonBackground">#4D1DA1</color>
+    <color name="buttonText">#FFFFFF</color>
+    <color name="normalText">#0C0C0C</color>
+    <color name="disableText">#4B0C0C0C</color>
+    <color name="warningText">#E12619</color>
+
+
 </resources>
