Added Night Model Color, Landscape Layout
Night model color xml file is added for the project.
Landscape layout is added for the dashboard.

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -17,11 +17,12 @@
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             android:id="@+id/weeklyCalendarView"
-            android:layout_width="387dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:mcv_calendarMode="week">
+            app:mcv_calendarMode="week"
+            app:mcv_dateTextAppearance="@color/normalText">
 
-        </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dashboard_recyclerView"
