--- a/app/src/main/res/layout-land/fragment_dashboard.xml
+++ b/app/src/main/res/layout-land/fragment_dashboard.xml
@@ -16,7 +16,8 @@
             android:layout_width="391dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            app:mcv_calendarMode="month">
+            app:mcv_calendarMode="month"
+            app:mcv_dateTextAppearance="@color/normalText">
 
         </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
 
