--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="125dp"
 
     app:cardElevation="4dp"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="75dp"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="8dp">
 
@@ -20,17 +20,19 @@
         <CheckBox
             android:id="@+id/todoCheckBox"
             android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_height="101dp"
             android:paddingStart="8dp"
             tool:text="Task"
+            android:textSize="15dp"
             >
         </CheckBox>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/editTask"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="113dp"
             android:layout_marginHorizontal="@dimen/cardview_default_elevation"
+            android:layout_marginTop="20dp"
             android:clickable="true"
             app:srcCompat="@android:drawable/ic_menu_edit" />
 
@@ -39,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/cardview_default_elevation"
+            android:layout_marginTop="20dp"
             android:clickable="true"
             app:srcCompat="@android:drawable/ic_menu_delete" />
 
