--- a/app/src/main/res/layout/activity_toadd.xml
+++ b/app/src/main/res/layout/activity_toadd.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:focusableInTouchMode="false"
+        android:focusable="false"
         android:hint="@string/time"
         android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:hint="@string/priority"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:focusableInTouchMode="false"
+        android:focusable="false"
         android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -78,7 +78,7 @@
         android:layout_marginTop="24dp"
         android:clickable="false"
         android:ems="10"
-        android:focusableInTouchMode="false"
+        android:focusable="false"
         android:hint="@string/date"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
