Added Useful Links UI Fragment

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -34,10 +34,9 @@
             android:id="@+id/weeklyCalendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:mcv_calendarMode="week"
-            app:mcv_dateTextAppearance="@color/normalText">
+            app:mcv_calendarMode="week">
 
-    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+        </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dashboard_recyclerView"
