--- a/app/src/main/res/layout/fragment_usefullinks.xml
+++ b/app/src/main/res/layout/fragment_usefullinks.xml
@@ -7,12 +7,12 @@
     tools:context=".ui.usefullinks.UsefullinksFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Link1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_usefullinks"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"
+        android:text="@string/link1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
