--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,15 +9,30 @@
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/Calendar_CalendarView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:layout_weight="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.041"
         app:mcv_calendarMode="month"
         app:mcv_dateTextAppearance="@color/normalText">
 
     </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+
+    <LinearLayout
+        android:id="@+id/Calendar_TaskList"
+        android:layout_width="374dp"
+        android:layout_height="336dp"
+        android:background="@color/design_default_color_primary_dark"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.959"></LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
