--- a/app/src/main/res/layout/fragment_usefullinks.xml
+++ b/app/src/main/res/layout/fragment_usefullinks.xml
@@ -10,10 +10,66 @@
         android:id="@+id/Link1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="40dp"
+        android:autoLink="web"
         android:text="@string/link1"
+        app:layout_constraintStart_toEndOf="@+id/study_helper"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/study_helper"
+        android:layout_width="91dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="represent websites which can improve study"
+        android:src="@drawable/ic_study_helper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/study_guide"
+        android:layout_width="91dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="represent websites which offer guide to study"
+        android:src="@drawable/ic_study_guide"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/google"
+        android:layout_width="91dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="120dp"
+        android:contentDescription="represent google websites"
+        android:src="@drawable/ic_google_stuff"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/study_helper" />
+
+    <TextView
+        android:id="@+id/Link2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="5dp"
+        android:autoLink="web"
+        android:text="@string/link2"
+        app:layout_constraintEnd_toStartOf="@+id/study_guide"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Link3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="184dp"
+        android:autoLink="web"
+        android:text="@string/link3"
+        app:layout_constraintStart_toEndOf="@+id/google"
+        app:layout_constraintTop_toBottomOf="@+id/Link1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
