--- a/app/src/main/res/layout/fragment_usefullinks.xml
+++ b/app/src/main/res/layout/fragment_usefullinks.xml
@@ -7,12 +7,11 @@
     tools:context=".ui.usefullinks.UsefullinksFragment">
 
     <TextView
-        android:id="@+id/Link1"
+        android:id="@+id/link1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="40dp"
-        android:autoLink="web"
+        android:layout_marginTop="32dp"
         android:text="@string/link1"
         app:layout_constraintStart_toEndOf="@+id/study_helper"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,25 +50,73 @@
         app:layout_constraintTop_toBottomOf="@+id/study_helper" />
 
     <TextView
-        android:id="@+id/Link2"
+        android:id="@+id/link2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="5dp"
-        android:autoLink="web"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="64dp"
         android:text="@string/link2"
         app:layout_constraintEnd_toStartOf="@+id/study_guide"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/Link3"
+        android:id="@+id/link3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="184dp"
-        android:autoLink="web"
         android:text="@string/link3"
         app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/Link1" />
+        app:layout_constraintTop_toBottomOf="@+id/link1" />
+
+    <TextView
+        android:id="@+id/link4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/link4"
+        app:layout_constraintStart_toEndOf="@+id/study_helper"
+        app:layout_constraintTop_toBottomOf="@+id/link1" />
+
+    <TextView
+        android:id="@+id/link5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/link5"
+        app:layout_constraintStart_toEndOf="@+id/google"
+        app:layout_constraintTop_toBottomOf="@+id/link3" />
+
+    <TextView
+        android:id="@+id/link6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="4dp"
+        android:text="@string/link6"
+        app:layout_constraintEnd_toStartOf="@+id/study_guide"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/link7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
+        android:text="@string/link7"
+        app:layout_constraintEnd_toStartOf="@+id/study_guide"
+        app:layout_constraintTop_toBottomOf="@+id/link6" />
+
+    <TextView
+        android:id="@+id/link8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/link8"
+        app:layout_constraintStart_toEndOf="@+id/link1"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
