--- a/app/src/main/res/layout/fragment_usefullinks.xml
+++ b/app/src/main/res/layout/fragment_usefullinks.xml
@@ -53,11 +53,11 @@
         android:id="@+id/link2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/link2"
-        app:layout_constraintEnd_toStartOf="@+id/study_guide"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/link4"
+        app:layout_constraintTop_toBottomOf="@+id/link1" />
 
     <TextView
         android:id="@+id/link3"
@@ -117,6 +117,36 @@
         android:layout_marginTop="32dp"
         android:text="@string/link8"
         app:layout_constraintStart_toEndOf="@+id/link1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/link9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/link9"
+        app:layout_constraintStart_toEndOf="@+id/link8"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/link10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/link10"
+        app:layout_constraintStart_toEndOf="@+id/link2"
+        app:layout_constraintTop_toBottomOf="@+id/link8" />
+
+    <TextView
+        android:id="@+id/link11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/link11"
+        app:layout_constraintStart_toEndOf="@+id/link9"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
