--- a/app/src/main/res/layout/fragment_usefullinks.xml
+++ b/app/src/main/res/layout/fragment_usefullinks.xml
@@ -6,147 +6,230 @@
     android:layout_height="match_parent"
     tools:context=".ui.usefullinks.UsefullinksFragment">
 
-    <TextView
-        android:id="@+id/link1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/link1"
-        app:layout_constraintStart_toEndOf="@+id/study_helper"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/study_helper"
-        android:layout_width="91dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="represent websites which can improve study"
-        android:src="@drawable/ic_study_helper"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/study_guide"
-        android:layout_width="91dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="8dp"
-        android:contentDescription="represent websites which offer guide to study"
-        android:src="@drawable/ic_study_guide"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/google"
-        android:layout_width="91dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
-        android:contentDescription="represent google websites"
-        android:src="@drawable/ic_google_stuff"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/study_helper" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/link2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/link2"
-        app:layout_constraintStart_toEndOf="@+id/link4"
-        app:layout_constraintTop_toBottomOf="@+id/link1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/link3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="184dp"
-        android:text="@string/link3"
-        app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/link1" />
+            <ImageView
+                android:id="@+id/study_helper"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="5"
+                android:src="@drawable/ic_study_helper" />
 
-    <TextView
-        android:id="@+id/link4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/link4"
-        app:layout_constraintStart_toEndOf="@+id/study_helper"
-        app:layout_constraintTop_toBottomOf="@+id/link1" />
+            <TextView
+                android:id="@+id/study_website_static_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="60dp"
+                android:layout_weight="5"
+                android:text="Essential Websites"
+                android:textAlignment="textStart"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/purple_700"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/link5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/link5"
-        app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/link3" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/link6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="4dp"
-        android:text="@string/link6"
-        app:layout_constraintEnd_toStartOf="@+id/study_guide"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/link_desmos"
+            android:text="@string/link_desmos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
 
-    <TextView
-        android:id="@+id/link7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="4dp"
-        android:text="@string/link7"
-        app:layout_constraintEnd_toStartOf="@+id/study_guide"
-        app:layout_constraintTop_toBottomOf="@+id/link6" />
+        <TextView
+            android:id="@+id/link_khan_academy"
+            android:text="@string/link_khan_academy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
 
-    <TextView
-        android:id="@+id/link8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/link8"
-        app:layout_constraintStart_toEndOf="@+id/link1"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/link_wiki"
+            android:text="@string/link_wiki"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
 
-    <TextView
-        android:id="@+id/link9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/link9"
-        app:layout_constraintStart_toEndOf="@+id/link8"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/link_quizlet"
+            android:text="@string/link_quizlet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
 
-    <TextView
-        android:id="@+id/link10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/link10"
-        app:layout_constraintStart_toEndOf="@+id/link2"
-        app:layout_constraintTop_toBottomOf="@+id/link8" />
+        <TextView
+            android:id="@+id/link_ocw"
+            android:text="@string/link_ocw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
 
-    <TextView
-        android:id="@+id/link11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/link11"
-        app:layout_constraintStart_toEndOf="@+id/link9"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/link_youtube"
+            android:text="@string/link_youtube"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/study_guide"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="5"
+                android:src="@drawable/ic_study_guide" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="60dp"
+                android:layout_weight="5"
+                android:text="Essential Tools"
+                android:textAlignment="textStart"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/purple_700"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/link_iclicker"
+            android:text="@string/link_iclicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="15dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
+        <TextView
+            android:id="@+id/link_crowdmark"
+            android:text="@string/link_crowdmark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
+        <TextView
+            android:id="@+id/link_umlearn"
+            android:text="@string/link_umlearn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
+        <TextView
+            android:id="@+id/link_gather"
+            android:text="@string/link_gather"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
+        <TextView
+            android:id="@+id/link_google_doc"
+            android:text="@string/link_google_doc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/teal_700"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
