--- a/app/src/main/res/layout/calendar_task_layout.xml
+++ b/app/src/main/res/layout/calendar_task_layout.xml
@@ -23,6 +23,7 @@
             android:layout_height="101dp"
             android:layout_weight="60"
             android:clickable="false"
+            android:focusable="false"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:textSize="15sp"
