Replace activity_toupdate.xml

--- a/app/src/main/res/layout/activity_toupdate.xml
+++ b/app/src/main/res/layout/activity_toupdate.xml
@@ -53,10 +53,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:autofillHints=""
         android:ems="10"
         android:focusable="false"
-        android:hint="@string/priority"
         android:inputType="none"
         android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +67,6 @@
         android:layout_width="233dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editEndTime" />
@@ -112,7 +109,6 @@
         android:clickable="false"
         android:ems="10"
         android:focusable="false"
-        android:hint="Type of Task"
         android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -124,7 +120,6 @@
         android:layout_width="233dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner1" />
@@ -136,6 +131,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:focusable="false"
+        android:clickable="false"
         android:hint="Unit"
         android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +144,6 @@
         android:layout_width="138dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.683"
         app:layout_constraintStart_toStartOf="parent"
