--- a/app/src/main/res/layout/calendar_task_layout.xml
+++ b/app/src/main/res/layout/calendar_task_layout.xml
@@ -29,6 +29,25 @@
             android:textSize="15sp"
             tool:text="Task"></CheckBox>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/calendarEditTask"
+            android:layout_width="wrap_content"
+            android:layout_height="113dp"
+            android:layout_marginHorizontal="@dimen/cardview_default_elevation"
+            android:layout_marginTop="20dp"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/ic_menu_edit"
+            android:contentDescription="@string/todo" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/calendarDeleteTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/cardview_default_elevation"
+            android:layout_marginTop="20dp"
+            android:clickable="true"
+            android:contentDescription="@string/todo"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
