--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -26,7 +26,7 @@
             app:mcv_tileWidth="0dp"></com.prolificinteractive.materialcalendarview.MaterialCalendarView>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/task_recyclerView"
+            android:id="@+id/calendar_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="true"
