Added Resource ID

--- a/app/src/main/res/layout/activity_toupdate.xml
+++ b/app/src/main/res/layout/activity_toupdate.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/updateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editEndTime" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/prioritySpinner"
         android:layout_width="233dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
@@ -122,7 +122,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
+        app:layout_constraintTop_toBottomOf="@+id/prioritySpinner" />
 
     <EditText
         android:id="@+id/unit"
