--- a/app/src/main/res/layout/calendar_task_layout.xml
+++ b/app/src/main/res/layout/calendar_task_layout.xml
@@ -2,14 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="125dp"
-
     app:cardElevation="4dp"
     app:cardCornerRadius="75dp"
     android:layout_marginHorizontal="10dp"
+    android:id="@+id/calendar_task_layout"
     android:layout_marginVertical="8dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
         android:padding="10dp">
 
         <CheckBox
-            android:id="@+id/todoCheckBox"
+            android:id="@+id/calendar_todoCheckBox"
             android:layout_width="0dp"
             android:layout_height="101dp"
             android:layout_weight="60"
