--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -18,7 +18,7 @@
         android:padding="10dp">
 
         <CheckBox
-            android:id="@+id/todoCheckBox"
+            android:id="@+id/calendar_todoCheckBox"
             android:layout_width="200dp"
             android:layout_height="101dp"
             android:layout_weight="60"
