Added Resource IDs

--- a/app/src/main/res/layout/finished_task_layout.xml
+++ b/app/src/main/res/layout/finished_task_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
 
+    android:id="@+id/finished_task_view"
     android:layout_width="match_parent"
     android:layout_height="125dp"
 
